--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clothes-ecommerce",
   "version": "0.1.0",
-  "homepage": "https://vadickpb.github.io/ecommerce-ropa",
+  "homepage": "https://vadickpb.github.io/ecommerce-ropa/",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && echo vadickpb.github.io/ecommerce-ropa > ./build/CNAME",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
